// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterContent={
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#E6E8EC",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <View
        alignItems="center"
        flex={1}
        flexDirection="row"
        justifyContent="space-between"
      >
        <MyText
          style={
            Object {
              "color": "#505256",
              "fontSize": 16,
            }
          }
        >
          Completed Wednesday, January 3 2018
        </MyText>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/checkIcon-grey.png",
            }
          }
          style={
            Object {
              "height": 24,
              "margin": 10,
              "width": 24,
            }
          }
        />
      </View>
    </View>
  }
  CenterHeader={
    <MyText>
      Completed Step
    </MyText>
  }
  RightHeader={null}
  bottomButtonProps={null}
  markdown="roge rules"
  text="SCOTTY"
/>
`;

exports[`without challenge suggestion renders correctly 1`] = `
<StepDetailScreen
  CenterContent={
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "#E6E8EC",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 10,
        }
      }
    >
      <View
        alignItems="center"
        flex={1}
        flexDirection="row"
        justifyContent="space-between"
      >
        <MyText
          style={
            Object {
              "color": "#505256",
              "fontSize": 16,
            }
          }
        >
          Completed Wednesday, January 3 2018
        </MyText>
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/checkIcon-grey.png",
            }
          }
          style={
            Object {
              "height": 24,
              "margin": 10,
              "width": 24,
            }
          }
        />
      </View>
    </View>
  }
  CenterHeader={
    <MyText>
      Completed Step
    </MyText>
  }
  RightHeader={null}
  bottomButtonProps={null}
  markdown={null}
  text="SCOTTY"
/>
`;
